Fixed page shift with scrollbar

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,31 +1,34 @@
+html
+	overflow-y: scroll
+
 body
-  padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+	padding: 50px
+	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
 
 a:link
-  color: #127fdc
-  text-decoration: none
+	color: #127fdc
+	text-decoration: none
 a:visited
-  color: #17344d
-  text-decoration: none
+	color: #17344d
+	text-decoration: none
 a:hover
-  color: #669dcc
-  text-decoration: underline
+	color: #669dcc
+	text-decoration: underline
 a:active
-  color: #17344d
-  text-decoration: underline
+	color: #17344d
+	text-decoration: underline
 
 .cleanList
-  list-style-type: none
+	list-style-type: none
 
 .nav
-  float: right
-  list-style-type: none
+	float: right
+	list-style-type: none
 .active
-  list-style-type: disc
+	list-style-type: disc
 
 .contact
-  list-style-type: none
+	list-style-type: none
 
 img
-  vertical-align: middle
+	vertical-align: middle
